--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -79,7 +79,7 @@
             android:layout_marginStart="80dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="70dp"
-            android:text="+79754854583"
+            android:text="89754854583"
             android:textSize="14sp"
             android:fontFamily="@font/roboto_medium"
             app:layout_constraintEnd_toEndOf="@+id/imageView14"
