--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -43,7 +43,7 @@
             android:layout_marginTop="20dp"
             android:fontFamily="@font/roboto_medium"
             android:gravity="center"
-            android:text="Гость"
+            android:text="Пользователь"
             android:textColor="#19104E"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
