--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -11,15 +11,42 @@
         android:layout_height="match_parent"
         android:background="#F5F8FF">
 
-        <com.mapbox.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+        <TextView
+            android:id="@+id/TextLocal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/roboto_medium"
+            android:gravity="center"
+            android:text="Наши автосалоны"
+            android:textColor="#19104E"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/TimeWork"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="70dp"
+            android:fontFamily="@font/roboto_medium"
+            android:gravity="center"
+            android:text="Пн-Пт — 09:00 до 19:00
+                          Сб-Вс — 10:00 до 17:00"
+            android:textColor="#19104E"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@+id/TextLocal" />
+
+        <com.mapbox.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            mapbox:mapbox_cameraTargetLat="55.754162"
-            mapbox:mapbox_cameraTargetLng="37.619797"
-            mapbox:mapbox_cameraZoom="9.0"
-            />
+            android:layout_height="500dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/TimeWork"
+            app:mapbox_cameraTargetLat="55.754162"
+            app:mapbox_cameraTargetLng="37.619797"
+            app:mapbox_cameraZoom="9.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
